--- a/client/ui/scss/_game.scss
+++ b/client/ui/scss/_game.scss
@@ -267,6 +267,7 @@
     transform: translate(300px, -50%);
     margin: 0;
     text-align: center;
+    z-index: 1000;
 
     @media (max-width: 1199.98px) {
       transform: translate(400px, -50%);
